<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#88000000">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ugc_ioffer_popup_menu_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ugc_ic_ioffer_popup_menu_bg" >

        <Button
            android:id="@+id/bnt_popup_video"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ugc_ic_ioffer_popup_menu_normal_selector"
            android:text="@string/ugc_popup_menu_video" />

        <Button
            android:id="@+id/bnt_popup_audio"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/bnt_popup_video"
            android:layout_alignRight="@id/bnt_popup_video"
            android:layout_below="@id/bnt_popup_video"
            android:layout_marginTop="10dp"
            android:background="@drawable/ugc_ic_ioffer_popup_menu_normal_selector"
            android:text="@string/ugc_popup_menu_audio" />

        <Button
            android:id="@+id/bnt_popup_image"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/bnt_popup_video"
            android:layout_alignRight="@id/bnt_popup_video"
            android:layout_below="@id/bnt_popup_audio"
            android:layout_marginTop="10dp"
            android:background="@drawable/ugc_ic_ioffer_popup_menu_normal_selector"
            android:text="@string/ugc_popup_menu_image" />

        <Button
            android:id="@+id/bnt_popup_camera"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/bnt_popup_video"
            android:layout_alignRight="@id/bnt_popup_video"
            android:layout_below="@id/bnt_popup_image"
            android:layout_marginTop="10dp"
            android:background="@drawable/ugc_ic_ioffer_popup_menu_normal_selector"
            android:text="@string/ugc_popup_menu_record" />

        <Button
            android:id="@+id/bnt_popup_cancel"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@id/bnt_popup_video"
            android:layout_alignRight="@id/bnt_popup_video"
            android:layout_below="@id/bnt_popup_camera"
            android:layout_marginTop="15dp"
            android:background="@drawable/ugc_ic_ioffer_popup_menu_cancel_selector"
            android:textColor="#ffffff"
            android:text="@string/ugc_popup_menu_cancel" />
    </RelativeLayout>

</RelativeLayout>