<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ugc_ic_ioffer_register_background" >
    
    <RelativeLayout
        android:id="@+id/add_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ugc_ioffer_top_bar_height"
        android:background="@drawable/ugc_ic_ioffer_title_bar_bg" >

        <TextView
            android:id="@+id/bnt_upload_back"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ugc_ic_ioffer_top_bar_back_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="buttonOnclick"
            android:text="@string/ugc_label_upload_back"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ioffer_add_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ugc_label_upload_title"
            android:textColor="@color/ugc_color_register_big_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bnt_upload_edit"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ugc_ic_ioffer_top_bar_ok_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="buttonOnclick"
            android:text="@string/ugc_label_upload_edit"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

    <com.sobey.ioffer.upload.view.UploadFileListView
        android:id="@+id/upload_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_below="@id/add_title_bar"/>

</RelativeLayout>