<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_ioffer_register_background" >

    <RelativeLayout
        android:id="@+id/ioffer_comment_edit_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ioffer_top_bar_height"
        android:background="@drawable/ic_ioffer_title_bar_bg" >

        <TextView
            android:id="@+id/ioffer_comment_edit_cancel"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_ioffer_top_bar_back_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="topBarOnClick"
            android:text="@string/label_comment_edit_cancel"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ioffer_comment_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/label_comment_edit_subbmit_comment"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ioffer_comment_edit_send"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:background="@drawable/ic_ioffer_top_bar_ok_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="topBarOnClick"
            android:text="@string/label_comment_edit_send"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ioffer_comment_edit_grade"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/ioffer_comment_edit_titlebar"
        android:background="@drawable/ic_ioffer_content_rank_default" >

        <RatingBar
            android:id="@+id/ioffer_comment_edit_rating"
            style="@style/IofferRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1" />

        <TextView
            android:id="@+id/ioffer_comment_edit_rating_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ioffer_comment_edit_rating"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/label_comment_edit_rating_prompt"
            android:textColor="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ioffer_comment_edit_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ioffer_comment_edit_grade"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ioffer_comment_edit_block_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:baselineAligned="false"
            android:background="@drawable/ic_ioffer_comment_edit_title_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/ic_ioffer_input_lable_h_gb" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/label_comment_edit_title"
                    android:textColor="#000000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/ic_ioffer_input_edit_h_gb"
                android:gravity="center" >

                <EditText
                    android:id="@+id/ioffer_comment_edit_edit_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ioffer_comment_edit_block_comment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/ic_ioffer_comment_edit_text_bg" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/ic_ioffer_input_lable_e_gb" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center"
                    android:text="@string/label_comment_edit_comment"
                    android:textColor="#000000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/ic_ioffer_input_edit_e_gb"
                android:gravity="center" >

                <EditText
                    android:id="@+id/ioffer_comment_edit_edit_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:minLines="5"
                    android:maxLines="10"
                    android:background="@null"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>